bitfields/tests/compile_error_cases/errors/bitfield_invalid_field_ignore_value.stderr
error: Invalid value for boolean argument 'ignore'. Valid values are 'true' or 'false'
 --> tests/compile_error_cases/errors/bitfield_invalid_field_ignore_value.rs:5:37
  |
5 |     #[bits(default = 0x12, ignore = 43242)]
  |                                     ^^^^^
